/*
 * 
 *  Copyright Â© 2010, 2011 Inadco, Inc. All rights reserved.
 *  
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *  
 *         http://www.apache.org/licenses/LICENSE-2.0
 *  
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 *  
 *  
 */

// input proto

package inadco.hbl.example1;
option java_package = "com.inadco.hb.example1.codegen";
option optimize_for = SPEED;

// schema for compiler input. 
// here, we just enumerate all dimensions and all 
// measures associated with a fact.

message CompilerInput {
  optional bytes dim1  = 1;
  optional bytes dim2  = 2;
  optional bytes dim3  = 3;
  optional uint64 impressionTime = 4;
  optional uint64 impCnt = 5;
  optional uint64 click = 6;
}